--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_library(LIBRESSL_CRYPTO_LIBRARY crypto)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-file(GLOB_RECURSE SOURCES "net/*.cc" "crypto/*.cc" "time_utils.cc" "net_test.cc")
+file(GLOB_RECURSE SOURCES "utils/*.cc" "net/*.cc" "crypto/*.cc" "time_utils.cc" "net_test.cc")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
